# rover

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: code_coverage.cmake  compiler_features.cmake  compiler_warnings.cmake  cotire.cmake  cotire.cmake.in  googletest.cmake  googletest.cmake.in  networking-ts.cmake  networking-ts.cmake.in
rover-client/: CMakeLists.txt
rover-client/src/: main.cpp
rover-framework/: CMakeLists.txt
rover-framework/include/rover/: framework.h
rover-framework/src/display/: display.h
rover-framework/src/games/lost_cities/: action_detail.cpp  action_detail.h  actions.cpp  actions.h  card_stack.h  cards.h  containers.h  deck.h  default_controller.h  discard.h  expedition.h  game_session.h  game_state.h  hand.h  lost_cities.h  player_actions.h  player_area.h  player_controller.h  player_hand.h  player_state.h  utils.h
rover-framework/src/precompiled/: precompiled.h
rover-framework/src/runner/: dummy.h  runner.cpp  runner.h
rover-framework/src/server/: server.h
rover-framework/src/solver/: solver.h
rover-framework/test/: CMakeLists.txt
rover-framework/test/src/lost_cities/: actions.cpp  card_storage.cpp  cards.cpp  deck.cpp  discard.cpp  expedition.cpp  game.cpp  game_session.cpp  player_hand.cpp
rover-framework/test/src/sample/: actions.cpp  card_storage.cpp  cards.cpp  deck.cpp  discard.cpp  expedition.cpp  game.cpp  game_session.cpp  hand.cpp  player_hand.cpp  test.cpp
rover-framework/test/src/server/: server.cpp
rover-runner/: CMakeLists.txt
rover-runner/src/: main.cpp
rover-server/: CMakeLists.txt
rover-server/src/: main.cpp
